sidux-hermes (0.1.11) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 03 Aug 2009 14:14:22 +0200

sidux-hermes (0.1.10) unstable; urgency=low

  * fix news RSS URL for hermes.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 02 Aug 2009 15:35:16 +0200

sidux-hermes (0.1.9) unstable; urgency=low

  [ Joaquim Boura ]
  * updated greek language file (thks edhunter)

  [ Stefan Lippers-Hollmann ]
  * add x-un-i to uploaders.
  * bump policy version to 3.8.1, no changes necessary.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 29 Apr 2009 01:26:32 +0200

sidux-hermes (0.1.8) unstable; urgency=low

  * Italian translation updated. Thanks to pinguin. 

 -- Fabian Wuertz <xadras@sidux.com>  Tue, 10 Mar 2009 14:09:47 +0100

sidux-hermes (0.1.7) unstable; urgency=low

  * qt4: status message fixed.

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 05 Mar 2009 16:08:42 +0100

sidux-hermes (0.1.6) unstable; urgency=low

  * qt4: version number added to about.

 -- Fabian Wuertz <xadras@sidux.com>  Sat, 28 Feb 2009 14:42:21 +0100

sidux-hermes (0.1.5) unstable; urgency=low

  * spell fixes.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 25 Feb 2009 23:16:15 +0100

sidux-hermes (0.1.4) unstable; urgency=low

  * Italian translation added. Thanks to pinguin. 
  * Qt4: typo 

 -- Fabian Wuertz <xadras@sidux.com>  Mon, 23 Feb 2009 19:45:34 +0100

sidux-hermes (0.1.3) unstable; urgency=low

  * fix desktop-entry-contains-encoding-key.
  * improve short descriptions.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 20 Feb 2009 17:58:56 +0100

sidux-hermes (0.1.2) unstable; urgency=low

  * sidux-hermes man pages added.
  * prealert status added.
  * qt4: reload of the upgradable packages view after an update.

 -- Fabian Wuertz <xadras@sidux.com>  Mon, 16 Feb 2009 12:10:06 +0100

sidux-hermes (0.1.1) unstable; urgency=low

  * qt4: tooltip of the upgrade button fixed.
  * debian: missing dependency apt-show-versions added.
