@@ -18,7 +18,7 @@ Architecture: all
 Depends: ${misc:Depends},
          wget,
          apt-show-versions
-Description: upgrade sentinel for the cli
+Description: sdiux upgrade sentinel for the cli
  Console program that shows the status of the Debian sid repository.
  .
  It gets the warnings from sidux.com.
@@ -30,7 +30,7 @@ Depends: ${misc:Depends},
          python,
          python-gtk2
 Conflicts: siduxcc-gtk2 (<= 0.12.12)
-Description: upgrade sentinel for gtk2
+Description: sidux upgrade sentinel for gtk2
  Gtk2 systray applet that shows the status of the Debian sid repository.
  .
  It gets the warnings from sidux.com.
@@ -39,9 +39,8 @@ Package: sidux-hermes-qt4
 Architecture: any
 Depends: ${misc:Depends},
          ${shlibs:Depends},
-         sidux-hermes (= ${source:Version}),
          sidux-apt-qt4
-Description: upgrade sentinel for sidux-hermes-qt4
+Description: sidux upgrade sentinel for qt4
  Qt4 systray applet that shows the status of the Debian sid repository.
  .
  It gets the warnings from sidux.com.
