@@ -1,8 +1,15 @@
 sidux-hermes (0.1.11) UNRELEASED; urgency=low
 
+  [ Stefan Lippers-Hollmann ]
   * NOT RELEASED YET
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 03 Aug 2009 14:14:22 +0200
+  [ Fabian Wuertz ]
+  * qt4: Changed detection system
+  * qt4: Cli dependency removed
+  * qt4: Show warnings improved   
+  * debian: Description updated
+
+ -- Fabian Wuertz <xadras@sidux.com>  Thu, 06 Aug 2009 15:19:56 +0200
 
 sidux-hermes (0.1.10) unstable; urgency=low
 
